<resources>
    <string name="app_name">Nueva Oportunidad</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_gallery">Home</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_publicar">Publicar</string>
    <string name="menu_venta">Venta</string>
    <string name="menu_contacto">Contacto</string>
    <string name="menu_ubicanos">Ubicanos</string>
    <string name="menu_adios">Cerrar Sesion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_mapa">Mapa</string>
</resources>