<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:background="@drawable/side_nav_bar">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/casa"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/venta"
            android:icon="@drawable/dolar"
            android:title="@string/menu_venta" />
        <item
            android:id="@+id/subirDatos"
            android:icon="@drawable/publicar"
            android:title="@string/menu_publicar" />
        <item
            android:id="@+id/contacto"
            android:icon="@drawable/mapa"
            android:title="@string/menu_contacto" />
        <item
            android:id="@+id/cerrarSesion"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/menu_adios" />
    </group>
</menu>